# toolkitten

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: 404.html  index.md  overview.md
docs/plot/: exceptions.md  functions.md  subplot.md  types.md
docs/script/: exclude.js
docs/styles/: exclude.css
toolkitten/: __init__.py
toolkitten/plot/: __init__.py  exceptions.py  subplot.py  types.py
toolkitten/plot/function/: __init__.py  functions.py
